fixed button width

--- a/assets/style.css
+++ b/assets/style.css
@@ -30,7 +30,8 @@ a {
 
 .btn-download {
     display: block;
-    width: 70%;
+    width: 100%;
+    height: auto;
 }
 .btn-primary {
     color: #fff;s
