--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,12 @@
+#navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  display: block;
+  transition: top 0.3s;
+  z-index: 99;
+}
+
 body {
     margin: 0;
 	font-family: "Plus Jakarta Text Regular", sans-serif;
@@ -6,6 +15,10 @@ body {
     line-height: 1.5;
     color: #fff;
     text-align: left;
+}
+
+.navbar.transparent.navbar-inverse .navbar-inner {
+   background: rgba(0,0,0,0.4);
 }
 
 a:hover {
@@ -124,6 +137,9 @@ a {
 .bg-jingga {
 	background: #fc351c;
 	
+}
+
+.bg-trans{  background: rgba(0,0,0,0.4);
 }
 
 .bg-green {
@@ -325,6 +341,7 @@ input[type=checkbox]:checked + label {
 	padding: 0px;
 	outline: none;
 	display: block;
+	border: none;
 }
 .slider::-webkit-slider-thumb {
 	z-index: 3;
@@ -336,6 +353,7 @@ input[type=checkbox]:checked + label {
 	height: 40px;
 	background: #333;
 	cursor: ew-resize;
+	border:none;
 }
 
 .glyph-grid {
