fixed small bugs

--- a/assets/style.css
+++ b/assets/style.css
@@ -153,6 +153,10 @@ a {
     background-color: #19ae5d!important;
 }
 
+.bg-black {
+    background-color: #000!important;
+}
+
 
 .bg-blue {
     background-color: #1c5ddc!important;
